<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hw</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="list_item_icon">list item icon</string>
    <string name="empty">Empty list</string>
    <string name="error">error_loading</string>
    <string name="add_new_item">Add new item</string>
    <string name="text1">text1</string>
    <string name="text2">text2</string>
    <string name="title_details_activity">detail activity</string>
    <string name="action_gson_test">gson test</string>
    <string name="source_to_obj">source json to obj</string>
    <string name="obj_to_string">obj to string</string>
    <string name="action_restart_loader">restart loader</string>
    <string name="action_async_task">asyncTest</string>
    <string name="action_insert">insert</string>
    <string name="update">Update</string>
    <string name="cancel">cancel</string>
    <string name="login_web_view">login WebView</string>
    <string name="login_vk_app">login VK app</string>
    <string name="login_google">login Account manager</string>
    <string name="login_ok">Ok login</string>
    <string name="login_vk">login VK browser</string>
    <string name="login_vk_browser">VK login via browser</string>
    <string name="rotate_activity_caption">2 fragments in Activity with rotate</string>
    <string name="no_selected_item">No selected items</string>
    <string name="stack_activity_caption">BackStack sample</string>
    <string name="add_fragment">add fragment</string>
    <string name="pager_activity_caption">ViewPager sample</string>
    <string name="add_tab">add</string>
    <string name="size">size</string>
    <string name="flag">flag</string>
    <string name="country">Country</string>
    <string name="country_full_name">Country fullname</string>

</resources>
