<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <ImageView
        android:layout_margin="16dp"
        android:id="@android:id/icon1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/flag"
        android:src="@drawable/ic_launcher"
        android:layout_centerVertical="true"/>

    <TextView
        android:layout_marginLeft="72dp"
        android:paddingTop="20dp"
        android:layout_alignParentTop="true"
        android:id="@android:id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textSize="16sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_marginLeft="72dp"
        android:paddingBottom="20dp"
        android:layout_below="@android:id/text1"
        android:id="@android:id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/country_full_name"
        android:textSize="14sp"/>
</RelativeLayout>