<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

    <Button
        android:id="@+id/login_web_view"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/login_web_view"
        android:onClick="onWebViewLoginClick"/>
    <Button
        android:layout_below="@id/login_web_view"
        android:id="@+id/login_vk_client"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/login_vk_app"
        android:onClick="onBrowserLoginClick"/>
    <Button
        android:layout_below="@id/login_vk_client"
        android:id="@+id/login_account_manager"
        android:layout_width="match_parent"
        android:text="@string/login_google"
        android:layout_height="48dp"
        android:onClick="onAccountManagerLoginClick"/>
    <Button
        android:layout_below="@id/login_account_manager"
        android:id="@+id/login_ok"
        android:layout_width="match_parent"
        android:text="@string/login_ok"
        android:layout_height="48dp"
        android:onClick="onOkLoginClick"/>
    <Button
        android:layout_below="@id/login_ok"
        android:id="@+id/login_vk"
        android:layout_width="match_parent"
        android:text="@string/login_vk"
        android:layout_height="48dp"
        android:onClick="onVkLoginClick"/>

    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_below="@id/login_vk"
        android:id="@+id/swipe_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </android.support.v4.widget.SwipeRefreshLayout>


    <TextView
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="Ничего нет!!!"
        android:visibility="gone"/>


    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="БабАХ!!!"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@android:id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>