<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="72dp">

    <ImageView
        android:layout_centerVertical="true"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:id="@android:id/icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/list_item_icon"
        android:src="@drawable/ic_launcher"/>

    <TextView
        android:layout_alignParentTop="true"
        android:paddingLeft="72dp"
        android:paddingTop="16dp"
        android:layout_gravity="center_vertical"
        android:id="@android:id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/text1"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_below="@android:id/text1"
        android:paddingLeft="72dp"
        android:paddingBottom="16dp"
        android:layout_gravity="center_vertical"
        android:id="@android:id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray"
        android:text="@string/text2"/>
</RelativeLayout>