<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="56dp">

    <ImageView
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:id="@android:id/icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/list_item_icon"
        android:src="@android:drawable/ic_popup_sync"/>

    <TextView
        android:layout_centerVertical="true"
        android:paddingLeft="72dp"
        android:paddingStart="72dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:layout_gravity="center_vertical"
        android:id="@android:id/text1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="16sp"
        android:text="@string/text1"/>

    <TextView
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="16dp"
        android:layout_gravity="center_vertical"
        android:id="@android:id/text2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="16sp"
        android:text="@string/text2"/>
</RelativeLayout>
